--- a/gb/nf4514.md
+++ b/gb/nf4514.md
@@ -18,6 +18,7 @@
 <tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/17/n13241909.md#1" target="_blank">在Costco买食品 八种最实惠 五种不合算</a><br></h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/17/n13241909.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12983256-GettyImages-756618-150x120.jpg" align ="left"></a>美国仓储式连锁店Costco（好市多）售卖很多受欢迎的食品，吸引大量消费者。大多数消费者一般最多一周去一次Costco购物，且Costco出售的多是大包装商品，食品也不例外。从经济实惠的角度考虑，哪些食品在Costco买合算，哪些不实惠呢？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月19日 6:30 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/18/n13243925.md#1" target="_blank">核潜艇威慑力大 攻击型和弹道导弹型有何区别</a><br></h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/18/n13243925.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/50517609786_370824c32a_o-150x120.jpg" align ="left"></a>随着澳大利亚与美国和英国达成协议，开始一项核动力潜艇计划，核潜艇话题开始成为热点。那么核潜艇是如何运作的，两种类型的核潜艇又有何区别呢？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月19日 6:00 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/19/n13244498.md#1" target="_blank">分享中国传统文化 新世纪中秋游园日受褒奖</a><br></h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/19/n13244498.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13244507-image00015-150x120.jpeg" align ="left"></a>9月18日，位于纽约上州橙县鹿苑镇（the town of Deerpark，Orange County）的新世纪公司（the New Century）举办了今年的中秋游庆祝活动，受到了当地居民的热情欢迎，逾千人参加了本次游园活动。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月19日 2:56 PM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/18/n13244088.md#1" target="_blank">中共官媒罕见重提林彪策划武装政变</a><br></h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/18/n13244088.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13244093-maolinfire2-600x400@1200x1200-150x120.jpeg" align ="left"></a>中共中央机关刊物《求是》杂志旗下的求是网，9月16日刊文强调中共建党的历史是“党指挥枪”，并罕见提到“文革”期间中共党政军的二把手林彪，称其“策划武装政变”。有分析认为，中共官媒如此提法令人吃惊，因为在习近平上台前，官方曾含蓄的为林彪平反。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月19日 1:40 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/19/n13244483.md#1" target="_blank">恒大受害人患病求兑付被拒 维权遭警传唤</a><br></h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/19/n13244483.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13244490-GettyImages-1235284069-150x120.jpg" align ="left"></a>恒大集团旗下的“恒大财富”理财产品逾期未兑付，18日凌晨，恒大集团发布公告称，截至今年5月1日，有六名高管提前赎回12笔投资产品，引发不满。有受害人告诉大纪元，她罹癌开刀急需医药费，却被拒绝提前兑付，现在只能靠卡债度日。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月19日 11:40 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/18/n13244185.md#1" target="_blank">上万非法移民聚德州立交桥下 美宣布驱逐</a><br></h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/18/n13244185.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13244197-Border-Del-Rio-bridge-IMG_1204-150x120.jpg" align ="left"></a>美国国土安全部（DHS）周六宣布，聚集在德州高速立交桥下的非法移民将被驱逐。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月19日 8:05 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/18/n13244178.md#1" target="_blank">美日澳印将举行四方峰会 加强芯片供应链安全</a><br></h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/18/n13244178.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13231394-GettyImages-1231667255-150x120.jpg" align ="left"></a>《日经新闻》周六（9月18日）报导说，他们获得的一份下周四方会谈的联合声明草案显示，美国、日本、澳大利亚、印度四国将把先进技术与人权联系在一起，反对中国（中共）利用科学和技术在世界各地维护独裁政权。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月19日 6:04 AM							</td></tr>
@@ -33,6 +34,5 @@
 <tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/17/n13241928.md#1" target="_blank">银河系有大量有机物 外星生命数量或远超想像</a><br></h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/17/n13241928.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2018/07/Fotolia_41253548_Subscription_L-150x120.jpg" align ="left"></a>人们一直好奇是否有外星生命存在。由于地球上的生物一般都需要大量有机分子构成，要想找到类似的外星生命，寻找有机物即是重中之重。如果宇宙空间中存在很多有机物质，那么就有可能孕育生命。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月18日 8:07 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/17/n13242389.md#1" target="_blank">古斯曼狱中病亡 “共产主义第四把剑”折了</a><br></h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/17/n13242389.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13242392-000_9MN624-150x120.jpg" align ="left"></a>2021年9月11日，秘鲁毛派游击队头子、恐怖组织“光辉道路”前领导人古斯曼病死在监狱里。随着他的死亡，一个以他为血腥标志的秘鲁动荡时代结束了。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月18日 4:13 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/17/n13241542.md#1" target="_blank">中秋祝福 新西兰法轮功学员感恩李洪志大师</a><br></h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/17/n13241542.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13242034-2021-9-16-new-zealand-mid-autumn-greetings_01-150x120.png" align ="left"></a>9月份，南半球的新西兰春意盎然，在中秋节来临之际，新西兰法轮功学员感谢李洪志师父的慈悲救度之恩，感慨自己在法轮大法法理的指导下茁壮成长。他们表示要珍惜这万古机缘，立志修好自己，让更多的众生明白真相，选择美好的未来。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月18日 2:40 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/16/n13239168.md#1" target="_blank">美英澳组新战略联盟 专家：全面压制中共</a><br></h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/16/n13239168.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13239170-517245-150x120.jpg" align ="left"></a>美国、英国、澳洲15日共同宣布成立名为“AUKUS”的三方防卫联盟，协助澳洲发展核动力潜舰。专家16日表示，美国这套大战略，是先透过切香肠战术，逐步提高台湾地位，再透过多边共同的正名行动，逼迫中共让步，若中方军事冒进，各国也已摆好阵型应对。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月18日 1:42 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/nf4514.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/nf4514_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/nf4514_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/nf4514_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/nf4514_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/nf4514_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/nf4514_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/nf4514_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/nf4514_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/nf4514_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/nf4514_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/zdhfsi3794/djy/blob/master/gb/nf4514.md#1<br><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/nf4514.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/zdhfsi3794/djy/blob/master/gb/nf4514.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf4514.htm">https://www.epochtimes.com/gb/nf4514.htm</a>    （国内需<a href="https://github.com/zdhfsi3794/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
