--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -10,6 +10,7 @@
 <tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/19/n13245464.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/09/id13245632-180412005735100484-320x200.jpg" align ="left"></a><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/19/n13245464.md#1" target="_blank">李嘉欣富豪丈夫似一夜变老 被拍拄拐杖蹒跚求医</a><br></h3>获封“最美港姐”的李嘉欣，2008年嫁给“香港船王”许爱周之孙许晋......<br><img align="bottom" src="https://raw.githubusercontent.com/zdhfsi3794/www/master/t/ntdtv/time.gif">09月20日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/19/n13245691.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/02/2-39-320x200.jpg" align ="left"></a><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/19/n13245691.md#1" target="_blank">病毒溯源 《柳叶刀》文章吁进行公开透明辩论</a><br></h3>上周五（9月17日），知名医学杂志《柳叶刀》发表了一篇文章，呼吁就......<br><img align="bottom" src="https://raw.githubusercontent.com/zdhfsi3794/www/master/t/ntdtv/time.gif">09月20日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/19/n13245816.md#1" target="_blank"><img width="250" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg" align ="left"></a><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/19/n13245816.md#1" target="_blank">三退声明精选（2021/09/19）</a><br></h3>大一时被恶老师和学姐坑蒙拐骗地带着申请入党，成为所谓的“入党积极分......<br><img align="bottom" src="https://raw.githubusercontent.com/zdhfsi3794/www/master/t/ntdtv/time.gif">09月20日</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/18/n13244088.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/09/id13244093-maolinfire2-600x400@1200x1200-320x200.jpeg" align ="left"></a><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/18/n13244088.md#1" target="_blank">中共官媒罕见重提林彪策划武装政变</a><br></h3>中共中央机关刊物《求是》杂志旗下的求是网，9月16日刊文强调中共建......<br><img align="bottom" src="https://raw.githubusercontent.com/zdhfsi3794/www/master/t/ntdtv/time.gif">09月20日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/19/n13245708.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2018/08/151015074347100311-320x200.jpg" align ="left"></a><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/19/n13245708.md#1" target="_blank">中国华融负债超万亿 6800亿债务即将到期</a><br></h3>根据中国华融资产管理股份有限公司近日公告显示，该公司资产负债率高达......<br><img align="bottom" src="https://raw.githubusercontent.com/zdhfsi3794/www/master/t/ntdtv/time.gif">09月20日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/19/n13245613.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/08/id13199064-fan-bingbing-zhao-wei-320x200.jpg" align ="left"></a><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/19/n13245613.md#1" target="_blank">中共继续“割韭菜” 令明星网红限期补税</a><br></h3>继2018年中共当局强化影视行业税收监管、明星补税约118亿元之后......<br><img align="bottom" src="https://raw.githubusercontent.com/zdhfsi3794/www/master/t/ntdtv/time.gif">09月20日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/19/n13244852.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/09/id13235684-GettyImages-1235242848-320x200.jpg" align ="left"></a><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/19/n13244852.md#1" target="_blank">【一线采访】厦门多家医院停诊 民间恐慌</a><br></h3>福建近期的中共病毒（新冠肺炎）疫情中，不仅学校成为重灾区，而且至少......<br><img align="bottom" src="https://raw.githubusercontent.com/zdhfsi3794/www/master/t/ntdtv/time.gif">09月20日</td></tr>
@@ -30,6 +31,5 @@
 <tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/19/n13244915.md#1" target="_blank"><img width="250" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg" align ="left"></a><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/19/n13244915.md#1" target="_blank">河北一公司法人自杀获救 指衡水移动欠钱不给</a><br></h3>河北威云信息科技有限公司的创始人兼法定代表人孙某印近日自杀未遂。其......<br><img align="bottom" src="https://raw.githubusercontent.com/zdhfsi3794/www/master/t/ntdtv/time.gif">09月19日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/19/n13244844.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/09/id13244955-FreedomRally-1200x900-320x200.jpg" align ="left"></a><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/19/n13244844.md#1" target="_blank">【疫情9.19】纽约数千人集会抗议疫苗护照</a><br></h3>据约翰?霍普金斯大学的统计数据，截至美东夏令时周日（9月19日）上......<br><img align="bottom" src="https://raw.githubusercontent.com/zdhfsi3794/www/master/t/ntdtv/time.gif">09月19日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/18/n13243925.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2020/10/50517609786_370824c32a_o-320x200.jpg" align ="left"></a><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/18/n13243925.md#1" target="_blank">核潜艇威慑力大 攻击型和弹道导弹型有何区别</a><br></h3>随着澳大利亚与美国和英国达成协议，开始一项核动力潜艇计划，核潜艇话......<br><img align="bottom" src="https://raw.githubusercontent.com/zdhfsi3794/www/master/t/ntdtv/time.gif">09月19日</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/19/n13244481.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/09/id13244836-ttl7daycsT_637d35136f1192b1-320x200.jpg" align ="left"></a><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/19/n13244481.md#1" target="_blank">【一线采访】莆田病例急攀升 民众：大型灾难事件</a><br></h3>福建省的中共病毒（新冠肺炎）疫情快速延烧，莆田等地的新增本土病例持......<br><img align="bottom" src="https://raw.githubusercontent.com/zdhfsi3794/www/master/t/ntdtv/time.gif">09月19日</td></tr>
 <tr><td><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/nsc413.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/nsc413_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/zdhfsi3794/djy/blob/master/gb/nsc413.md#1<br><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/nsc413.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/zdhfsi3794/djy/blob/master/gb/nsc413.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nsc413.htm">https://www.epochtimes.com/gb/nsc413.htm</a>    （国内需<a href="https://github.com/zdhfsi3794/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
