--- a/gb/nf3046_3.md
+++ b/gb/nf3046_3.md
@@ -43,6 +43,7 @@
 <tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/6/11/n13014567.md#1" target="_blank">【百年透视】中共是全世界最大的卖国党</a><br></h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/6/11/n13014567.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13056286-1960b835621bd24ec0531f4f75b717f6-150x120.jpg" align ="left"></a>今年是中共成立100年。中共经常高举“爱国主义”旗号，利用“维护国家主权、领土完整和安全”的幌子，批判“台独”、“藏独”、“疆独”、“港独”，这个“反华”，那个“卖国”。其实，中共根本不爱中国，中共曾大张旗鼓地在中华民国境内搞“共独”，中共是当代中国、当今世界上最大的卖国党。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年07月01日 4:07 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/6/28/n13054263.md#1" target="_blank">王友群：百年中共危机日深的六大表现</a><br></h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/6/28/n13054263.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13054266-b1da08c7d7f18055b0b691740c0b1367-600x321-150x120.jpeg" align ="left"></a>中国共产党即将“百年”了。中共正在风声鹤戾、草木皆兵、内外交困、四面楚歌中，准备“百年”的各项活动。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月29日 3:45 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/6/26/n13048869.md#1" target="_blank">袁斌：清华教授郭于华为何声明退党？</a><br></h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/6/26/n13048869.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13048925-zhangkangkan--150x120.jpeg" align ="left"></a>清华大学社会学系教授郭于华，是中国为数不多的敢言学者之一，多年来以关注中国底层社会的苦难，直言不讳批评时弊著称。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月26日 1:35 PM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/7/24/n13111328.md#1" target="_blank">三退声明精选（2021/07/23）</a><br></h3>退出中共邪恶党，中共不解体中国人没有好日子过，中共就是扫把星，河南的大水灾就是人祸。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年07月24日 10:52 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/7/19/n13100329.md#1" target="_blank">三退声明精选（2021/07/19）</a><br></h3>如今的中国，满目疮痍，内忧外患，民不聊生，我真的好心痛，但又无能为力，我爱中国，爱善良的中国人民，爱我们民族所创造的灿烂文化，爱这锦绣山河，独独不爱这个双手沾满鲜血的恶党！中华大地地大物博，美丽富饶，中国本不该如此，希望有一天，中国人民可以摆脱马列邪教的奴役和欺辱，重新站起来，铭记沉重惨痛的历史，迎来新生和希望。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年07月20日 8:05 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/7/17/n13095844.md#1" target="_blank">三退声明精选（2021/07/17）</a><br></h3>我以前加入过中国共产党、共青团和少先队等组织。当时没想那么多，看大多数人都参加这个组织，不参加就是思想落后，不要求向进，所以自己就参加了。现在才知道共产党是最不好的，是最坏的，越来越腐败、太邪恶了，天要灭中共。我现在严正声明：退出自己参加过的共产党、共青团和少先队等共产党的一切附属组织。声明自己举手宣的毒誓一律作废，抹去邪恶的印记。选择光明，选择美好的未来.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年07月18日 12:43 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/7/15/n13089755.md#1" target="_blank">三退声明精选（2021/07/14）</a><br></h3>现在共产党已经撕下了伪善的面具，赤裸裸的露出了其流氓嘴脸，独裁，暴力，谁和它言论不一直，就灭掉谁。视民众如草芥，杀人如麻，多少人因一句话，被失踪，被抓，被灭口，这已经是社会常态。人们已经对这个邪党完全失去信心，希望这个邪党尽快灭掉。我们都愿意退出这个邪党的一切组织。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年07月15日 11:12 AM							</td></tr>
@@ -62,6 +63,5 @@
 顾顺章何许人也？
 顾顺章，上海宝山吴淞人。1924年加入中共；1926年被派到苏联学习如何做“政治保卫”.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月27日 7:32 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/6/26/n13048702.md#1" target="_blank">三退声明精选（2021/06/25）</a><br></h3>我曾于小学、初中时期分别误入过赤匪的少先队和共青团组织。幸而在之后的岁月中，由于机缘和他人的努力，使我对怵目惊心的历史和邪党的本质有了从感性到理性的逐渐认识和思索。之前误以为退党是党员的事情，且心中早已与邪党无任何瓜葛，所以迟迟未发声明。如今补上这份迟来的声明，也就此了却一桩心事与执著。对于赤匪的团、队组织身份，不论过期与否，今正式声明退出。对于和恶党相关的.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月26日 11:23 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/6/24/n13043439.md#1" target="_blank">三退声明精选（2021/06/23）</a><br></h3>欺骗是经不起真相的光照的，一旦看见真相，共产党，真让我恶心！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月24日 10:51 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/nf3046_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/nf3046.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/nf3046_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/nf3046_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/nf3046_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/nf3046_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/nf3046_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/nf3046_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/nf3046_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/nf3046_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/nf3046_4.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/zdhfsi3794/djy/blob/master/gb/nf3046_3.md#1<br><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/nf3046_3.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/zdhfsi3794/djy/blob/master/gb/nf3046_3.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf3046_3.htm">https://www.epochtimes.com/gb/nf3046_3.htm</a>    （国内需<a href="https://github.com/zdhfsi3794/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
