--- a/gb/nf3046_4.md
+++ b/gb/nf3046_4.md
@@ -47,6 +47,7 @@
 毛确立刘为接班人
 毛比刘大5岁；他们都是湖南人，毛的老家在湘潭县韶山冲，刘的老家在宁乡县炭子冲；毛没有出国留学，刘曾留学苏联；早年，毛主要从事农民运动，刘主要从事工人运动；毛主要在中共所谓的红色根据地搞武装斗争，刘主要在中共所谓的白区（国民党统治区）领导地下.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月02日 7:24 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/5/28/n12981917.md#1" target="_blank">旅居日本华人 十余年电话大陆民众传真相</a><br></h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/5/28/n12981917.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12983373-IMG_5558abc-450x290-150x120.jpg" align ="left"></a>盛女士十几年来一直坚持给中国民众打电话讲真相，人们在觉醒，纷纷三退。她向记者讲述了一些感人的故事。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月31日 2:41 AM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/6/24/n13043439.md#1" target="_blank">三退声明精选（2021/06/23）</a><br></h3>欺骗是经不起真相的光照的，一旦看见真相，共产党，真让我恶心！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月24日 10:51 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/6/22/n13038155.md#1" target="_blank">三退声明精选（2021/06/21）</a><br></h3>学生时期总是活在象牙塔里，老师教什么就听什么，同学讲什么就信什么，就这样糊里糊涂的入了少先队、共青团。党媒说什么建设法治国家，就在大学读了法律专业想去报效国家。结果在大学，通过翻墙浏览了真相才知道，共产党打着法治的幌子搞709大抓捕，迫害维权律师和善良的法轮功修炼者。我才知道在这个国度共产党说什么法律就是什么，西方的民主法治对共产党来说就是对立的仇敌。我认清.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月22日 11:00 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/6/19/n13032288.md#1" target="_blank">王友群：毛泽东的接班人王洪文之死</a><br></h3>中共独裁者毛泽东选的第一个接班人刘少奇，1969年11月12日，被毛整死。第二接班人林彪，遭到毛的连番痛击后，1971年9月13日，在蒙古温都尔汗坠机身亡。之后，毛提出，要选一个年纪小的、学问少的、立场坚定的人来接班。经再三考虑，1973年，毛选定了他的第三个接班人王洪文。
 王洪文被抓捕
@@ -69,6 +70,5 @@
 <tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/6/3/n12994891.md#1" target="_blank">三退声明精选（2021/06/02）</a><br></h3>以前常被蒙骗，不知中共邪恶，近期翻墙看到中共建党至今的所做所为，知道它是一个流氓土匪黑社会邪教兽性集团。深感当它的一员是莫大的耻辱。故此要退出曾经加入的团、队组织，彻底与邪党划清界线。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月03日 9:54 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/6/2/n12993450.md#1" target="_blank">参考资料：纵观天下（2021年6月传单/传真）</a><br></h3>网上免费教功 民众好评如潮　我们上共产党的当了　风向大变 武毒所情报将解密　世界在区分中共与中国　每一个被扭紧的螺丝钉都是有罪的 退党声明......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月02日 6:27 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/5/31/n12987213.md#1" target="_blank">三退声明精选（2021/05/30）</a><br></h3>终于认清了邪党的本质，好走形势、做表面工程、为完成“任务”完全不为民众考虑，表面光鲜、实质腐败，后悔之前动过的想入党的愚蠢想法。在此声明，退出少先队、共青团组织，从此划清界限。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月31日 11:20 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/5/30/n12985367.md#1" target="_blank">三退声明精选（2021/05/29）</a><br></h3>现在是天怒人怨，张军在单位工作特别认真，因为没送礼被单位书记肆无忌惮的解除行政职务，官官相护，找谁谁推脱，明明知道错了就是不纠正。我声明退出中共邪党的少先队组织。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月30日 11:22 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/nf3046_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/nf3046.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/nf3046_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/nf3046_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/nf3046_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/nf3046_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/nf3046_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/nf3046_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/nf3046_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/nf3046_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/nf3046_5.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/zdhfsi3794/djy/blob/master/gb/nf3046_4.md#1<br><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/nf3046_4.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/zdhfsi3794/djy/blob/master/gb/nf3046_4.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf3046_4.htm">https://www.epochtimes.com/gb/nf3046_4.htm</a>    （国内需<a href="https://github.com/zdhfsi3794/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
