--- a/gb/news2007_2.md
+++ b/gb/news2007_2.md
@@ -19,7 +19,8 @@
 <tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/6/n13213473.md#1" target="_blank">古今两个中秋礼俗各异 古代不送月饼 月饼何时普及？</a><br></h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/6/n13213473.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2016/09/140907051909100311-150x120.jpg" align ="left"></a>古代有两个“中秋”？庆中秋已经开始很久了！古早中秋不送月饼送什么？古早月饼什么样？从什么时候开始中秋节吃月饼开始普遍呢？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月14日 7:33 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/13/n13229745.md#1" target="_blank">“美国插画之父”霍华德·皮尔的一堂课</a><br></h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/13/n13229745.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13229781-Pyle-Battle-of-Nashville_Dec_1864-150x120.jpg" align ="left"></a>皮尔的教学方法共有两大原则：心理投射和原创构图。心理投射包含“将自己设想于所描绘的场景中的能力。”而原创构图则是他最重要的教学工具之一。他鼓励学生以任何方式构图画面，只要能够新鲜又有力地向观众传达他们的艺术理念。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月14日 4:17 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/8/n13219765.md#1" target="_blank">天堂梦（160）</a><br></h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/8/n13219765.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12921185-Heaven--150x120.jpg" align ="left"></a>在文化思想道德上，国民政府坚守中华民族优良文化思想道德传统，重视文化教育，坚持用忠孝仁爱、仁义礼智信教育人民......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月14日 3:00 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/13/n13230626.md#1" target="_blank">青松絮语：记忆的旋律</a><br></h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/13/n13230626.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2019/01/Plants-love-music-1-150x120.jpg" align ="left"></a>或许曾经出现在生命中的每个细节都不是随意的，都有自己的使命，即便消失多年，也会在某时某地再次回归……......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月13日 10:37 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/16/n13239357.md#1" target="_blank">五律：秋晨</a><br></h3>仲秋虽夜凉， 一梦到家乡。 破晓天将白， 遮山云正黄。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月17日 12:12 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/16/n13239331.md#1" target="_blank">减字木兰花?忆同修</a><br></h3> 关山难度，难挡修徒归法路。 异国奇逢，万里长风面大雄。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月17日 12:10 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/16/n13239349.md#1" target="_blank">七绝：秋雨峨眉</a><br></h3>千年灵隐也飘摇， 爽飒秋风慰寂寥。 细雨如毛成画笔， 峨眉似月好修描！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月16日 11:23 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/16/n13239315.md#1" target="_blank">今月：瘟疫何时能结束——答友人</a><br></h3> 你问瘟疫何时能结束 不用再惧怕险恶的病毒 更大的灾难是否会降临 许多传说惊悚恐怖......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月16日 11:01 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/15/n13236660.md#1" target="_blank">七律：秋莲</a><br></h3> 不尽秋风转舞裙， 婷婷莲叶动乾坤。 荷花虽落荷香在， 莲藕未成莲籽存。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月16日 12:16 AM			</td></tr>
@@ -38,6 +39,5 @@
 那里没有扭曲的共产......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月14日 12:14 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/13/n13230758.md#1" target="_blank">诗歌：秋雨滂</a><br></h3>常见夏时滂雨烈， 怎知秋日怒苍龙。 狂风猛力摧秋叶， 闪电奇光裂夜空。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月14日 12:11 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/13/n13230757.md#1" target="_blank">七律：郑州洪灾</a><br></h3> 暴雨洪峰似脱缰， 商都顷刻汇汪洋。 水淹地铁沉潜艇， 洞没车流殒灌肠。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月14日 12:09 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/13/n13230078.md#1" target="_blank">七绝：天安门广场飞来黑天鹅</a><br></h3> 日初懒起玄鹅降  无意升旗逗鸟忙  误入广场因失路  何当书雁问兴亡......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月13日 7:51 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/news2007.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/news2007.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/news2007_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/news2007_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/news2007_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/news2007_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/news2007_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/news2007_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/news2007_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/news2007_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/news2007_3.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/uimzxm315/djy/blob/master/gb/news2007_2.md#1<br><a href="https://github.com/uimzxm315/djy/blob/master/gb/news2007_2.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/uimzxm315/djy/blob/master/gb/news2007_2.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/news2007_2.htm">https://www.epochtimes.com/gb/news2007_2.htm</a>    （国内需<a href="https://github.com/uimzxm315/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
