--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -7,7 +7,6 @@
 <tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/16/n13238911.md#1" target="_blank">阅读与思考力如何养成？作笔记、写摘要的关键</a><br></h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/16/n13238911.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/2019-12-04-17071-Fotolia_81795837_Subscription_L-150x120.jpg" align ="left"></a>“作笔记”、“写摘要”是阅读一本书最扎实的基本功。你是否有随手画重点、做记号，或在页面空白的地方写下自己的想法、问题呢？如果你具有这样作笔记的习惯，恭喜，你已是一位优秀的阅读者了。同样的，写摘要也能显示阅读理解的程度，快速掌握文本的重点。拥有写摘要的基本功，无论就学或就业都会很吃香。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月20日 2:32 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/20/n13246297.md#1" target="_blank">印度男子为小狗包下飞机整个商务舱</a><br></h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/20/n13246297.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13246304-dog-1158929_1920-150x120.jpg" align ="left"></a>印度一名男子为宠物狗包下印度航空公司（Air India）一架国内线班机的整个商务舱。在这段豪华的旅程里，只有他与爱犬坐在商务舱中。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月20日 1:39 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/16/n13237702.md#1" target="_blank">【大人料理】啤酒炖牛肉 独特口味软嫩好吃</a><br></h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/16/n13237702.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13237732-bf591df937e434bc6bff2ce5e7b23e83-150x120.jpg" align ="left"></a>“红酒炖牛肉”是一道常见西式家常菜，那么你是否也听过“台式啤酒炖牛肉”这一道菜呢？啤酒在高温炖煮下酒精会挥发掉，留下的是淡淡的啤酒香，同时啤酒酵素在炖煮牛肉的过程中渐渐渗入，牛肉上桌时咬起来非常软嫩好入口。整体的风味带点苦，但是汤品上的香草和啤酒香，混合出台式、西式料理的独特口味，不违和却异常好食。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月20日 8:45 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/18/n13243656.md#1" target="_blank">肯尼亚野生动物保护区中最年长的狮子</a><br></h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/18/n13243656.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13243661-lion-3123179_1920-150x120.jpg" align ="left"></a>肯尼亚马赛马拉国家自然保护区是野生狮子、猎豹和斑马的家园。今年早些时候，生活在这个保护区一只名叫莫拉尼的14岁狮子在它的哥哥和前狮子长寿记录保持者名叫疤脸的狮子去世后，获得了马赛马拉国家保护区最年长狮子的称号。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月20日 1:49 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/19/n13244842.md#1" target="_blank">美国女子死亡45分钟 在女儿产子前活了过来</a><br></h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/19/n13244842.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13244845-hospital-3192833_1920-150x120.jpg" align ="left"></a>美国巴尔的摩（Baltimore）一名女子因心脏病发作被医生宣告死亡，但在45分钟后被救了回来。而她原本难产的女儿也因为改采剖腹产而顺利生下小孩。对于接连两次遇到奇迹，该名女子心怀感恩。她感谢上帝给她重生的机会，也让她能看到刚出世的孙女。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月19日 5:31 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/18/n13243167.md#1" target="_blank">一锅抵十锅 电子压力锅省时省力 在家开伙变轻松</a><br></h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/18/n13243167.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2019/11/3b46848b7a3c3c82cb85e2f20ad9eb23-150x120.jpg" align ="left"></a>万用电子压力锅目前最时兴的烹调锅具，对于没有时间煮饭或不擅长料理的人，特别实用。利用蒸气压力烹煮食物，已经可以取代气炸锅、电锅、酸奶机等。烹煮速度快，省电、省钱、一锅抵十锅，其它烹调锅具都可以不用买了。万用电子压力锅可以气炸春卷、制酸奶、烘蛋糕、炒油饭、煮意大利面、意大利炖饭等。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月19日 4:58 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/19/n13244696.md#1" target="_blank">澳男童失踪3天获救 母：影像显示圣母保佑</a><br></h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/19/n13244696.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13244697-statue-4336180_1920-150x120.jpg" align ="left"></a>澳洲一名3岁自闭症男童日前在野地迷失，3天后仍奇迹般存活，而且被救援人员寻获。他的母亲相信，从警方公布他们在树林里发现他的影像中，人们可以看到圣母玛利亚在看护着他。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月19日 4:45 PM			</td></tr>
@@ -33,6 +32,7 @@
 &nbsp;
 GM集团的Chevrolet品牌，推出了2021年全新款S.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月18日 11:04 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/9/n13221905.md#1" target="_blank">去年西澳逾15区房产资本增长亮眼</a><br></h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/9/n13221905.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13221924-dcc03453c7d34f629225be3629fce833-150x120.jpg" align ="left"></a>新数据显示，去年西澳超过15个地区的房产资本增长高于业主的年工资收入。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月18日 10:21 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/9/n13221927.md#1" target="_blank">建房合同引纠纷  珀斯家庭建房梦难圆</a><br></h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/9/n13221927.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13221953-f7bd800221d4a12b7b51e8b4a5f6f27f-150x120.jpg" align ="left"></a>最近，一个西澳家庭在与房屋建筑商磋商的过程中产生了分歧。该家庭表示，他们被威胁性的法律信函和非诋毁性协议所压制，使其几乎没有办法摆脱建房合同。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月18日 10:16 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/19/n13243997.md#1" target="_blank">伊维菌素用于预防和治疗COVID-19感染的系统评价</a><br></h3>根据美国治疗学杂志（American Journal of Therapeutics）在2021年7、8月双月刊的报导（Ivermectin for Prevention and Treatment of COVID-19 Infection: A Systematic Review, Meta-analysis, a.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月19日 7:24 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/17/n13240921.md#1" target="_blank">肠胃闹脾气  茶饮、穴道来解救</a><br></h3>中秋节烤肉是一定要的娱兴节目，在开心的气氛下，容易暴饮暴食，也有不少民众常在大啖烤肉后，出现腹胀、腹痛等肠胃问题，或是吃完烤肉，隔天总是严重水肿，甚至身体横向发展。这次找扶原中医诊所院长郭大维来帮大家解决病痛与拯救身材。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月18日 3:31 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/17/n13240931.md#1" target="_blank">享受美食 中秋“肠”保健康</a><br></h3>无论是应景的烤肉或月饼，都是高油、高盐食物，容易引起消化道问题。医师分享妙招，享受美食的同时，避免肠胃拉警报。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月18日 2:55 PM			</td></tr>
