--- a/gb/nsc1002.md
+++ b/gb/nsc1002.md
@@ -19,8 +19,8 @@
 <h3><a href="https://github.com/pybnyd3634/djy/blob/master/gb/16/7/13/n8095287.md#1" target="_blank">薄荷清热、助消化又杀菌 民间3个食疗好方</a><br></h3>
 <h3><a href="https://github.com/pybnyd3634/djy/blob/master/gb/21/9/13/n13229960.md#1" target="_blank">4种柚子营养、热量谁较高？营养师1招控份量</a><br></h3>
 <h3><a href="https://github.com/pybnyd3634/djy/blob/master/gb/21/9/13/n13230595.md#1" target="_blank">脚底按摩促排毒 揉按2点最有效</a><br></h3>
-<h3><a href="https://github.com/pybnyd3634/djy/blob/master/gb/21/9/14/n13232012.md#1" target="_blank">按摩脚底4部位 改善更年期症状、调整自律神经</a><br></h3>
 <h3><a href="https://github.com/pybnyd3634/djy/blob/master/gb/21/9/14/n13233592.md#1" target="_blank">早晨10个好习惯 让你的一天更有条理</a><br></h3>
+<h3><a href="https://github.com/pybnyd3634/djy/blob/master/gb/21/9/17/n13240921.md#1" target="_blank">吃太多肉？2道茶饮 消除体内的油脂和湿气</a><br></h3>
 <h3><a href="https://github.com/pybnyd3634/djy/blob/master/gb/21/9/17/n13241301.md#1" target="_blank">冬瓜是“减肥瓜” 这样吃不花大钱就变瘦</a><br></h3>
 <h3><a href="https://github.com/pybnyd3634/djy/blob/master/gb/21/9/17/n13241568.md#1" target="_blank">【重播】以色列疫情创新高 群体免疫还有效吗？</a><br></h3>
 <h3><a href="https://github.com/pybnyd3634/djy/blob/master/gb/21/9/17/n13242154.md#1" target="_blank">维生素D有4大抗癌功效 补D防癌注意1关键</a><br></h3>
